[gd_scene load_steps=29 format=3 uid="uid://bfh8jrpfims4j"]

[ext_resource type="Texture2D" uid="uid://bt4tbj7krsouy" path="res://Sprites/Final_Enemy/Enemy_2/4LegsWalk-removebg-preview1-sheet.png" id="1_0qr4g"]
[ext_resource type="Script" path="res://Scripts/Enemy_2.gd" id="1_uppoj"]
[ext_resource type="Texture2D" uid="uid://h2dl7jwtcrfn" path="res://Sprites/Final_Enemy/Enemy_2/infernal_horse_deep.png" id="3_8uq4h"]
[ext_resource type="PackedScene" uid="uid://cueffd51ivwpu" path="res://Scenes/Characters/Enemy_HUD_2.tscn" id="3_a180j"]
[ext_resource type="Texture2D" uid="uid://clciky326eejr" path="res://Sprites/Final_Enemy/Enemy_2/infernal_horse_hit.png" id="3_o8fx0"]
[ext_resource type="Script" path="res://Scripts/Enemy_HUD_2.gd" id="4_3yjn3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vaj1n"]
atlas = ExtResource("1_0qr4g")
region = Rect2(0, 0, 91, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvoon"]
atlas = ExtResource("1_0qr4g")
region = Rect2(91, 0, 91, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_cye3y"]
atlas = ExtResource("1_0qr4g")
region = Rect2(182, 0, 91, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6fpk"]
atlas = ExtResource("1_0qr4g")
region = Rect2(273, 0, 91, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_30i3l"]
atlas = ExtResource("1_0qr4g")
region = Rect2(364, 0, 91, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_ku5pc"]
atlas = ExtResource("1_0qr4g")
region = Rect2(455, 0, 91, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lu73"]
atlas = ExtResource("1_0qr4g")
region = Rect2(546, 0, 91, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_msyun"]
atlas = ExtResource("1_0qr4g")
region = Rect2(637, 0, 91, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_285y7"]
atlas = ExtResource("3_o8fx0")
region = Rect2(0, 0, 91, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_th1xv"]
atlas = ExtResource("3_o8fx0")
region = Rect2(91, 0, 91, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tnjj"]
atlas = ExtResource("3_o8fx0")
region = Rect2(182, 0, 91, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjvqh"]
atlas = ExtResource("3_o8fx0")
region = Rect2(273, 0, 91, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_e137i"]
atlas = ExtResource("3_o8fx0")
region = Rect2(364, 0, 91, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_p38rs"]
atlas = ExtResource("3_8uq4h")
region = Rect2(0, 0, 91, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjb3x"]
atlas = ExtResource("3_8uq4h")
region = Rect2(91, 0, 91, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4yoq"]
atlas = ExtResource("3_8uq4h")
region = Rect2(182, 0, 91, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_mombd"]
atlas = ExtResource("3_8uq4h")
region = Rect2(273, 0, 91, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tmr4"]
atlas = ExtResource("3_8uq4h")
region = Rect2(364, 0, 91, 74)

[sub_resource type="SpriteFrames" id="SpriteFrames_n2vky"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vaj1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvoon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cye3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6fpk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30i3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ku5pc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lu73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msyun")
}],
"loop": true,
"name": &"caminar",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_285y7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_th1xv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tnjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjvqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e137i")
}],
"loop": false,
"name": &"golpe",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p38rs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjb3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4yoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mombd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tmr4")
}],
"loop": false,
"name": &"muerte",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_t5hln"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2pkex"]
radius = 32.1109

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dxefg"]
bg_color = Color(0.662745, 0.133333, 0.188235, 1)

[node name="Enemy2" type="CharacterBody2D"]
texture_filter = 3
collision_layer = 2
collision_mask = 8
script = ExtResource("1_uppoj")

[node name="MovementSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-21.3333, -10.6667)
sprite_frames = SubResource("SpriteFrames_n2vky")
animation = &"golpe"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-16, -10.6667)
shape = SubResource("CircleShape2D_t5hln")

[node name="ColissionRay" type="RayCast2D" parent="CollisionShape2D"]
position = Vector2(8, 2.6667)
scale = Vector2(2, 4)
target_position = Vector2(28, 0)
collision_mask = 10

[node name="Area2D" type="Area2D" parent="." groups=["Enemy"]]
collision_layer = 2
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-16, -10.6667)
shape = SubResource("CircleShape2D_2pkex")

[node name="FloorRay" type="RayCast2D" parent="."]
position = Vector2(24, -8)
target_position = Vector2(0, 32)
collision_mask = 10

[node name="Enemy_HUD_2" parent="." instance=ExtResource("3_a180j")]
offset_left = -5.0
offset_top = -45.0
offset_right = -5.0
offset_bottom = -45.0
script = ExtResource("4_3yjn3")

[node name="ProgressBar" type="ProgressBar" parent="Enemy_HUD_2"]
layout_mode = 1
anchors_preset = -1
anchor_left = -2.875
anchor_top = -0.296296
anchor_right = -2.875
anchor_bottom = -0.296296
offset_left = -41.0
offset_top = -11.0
offset_right = 23.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_dxefg")
step = 1.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[connection signal="animation_finished" from="MovementSprite" to="." method="_on_movement_sprite_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
